# hpipm-cpp

./: CMakeLists.txt  LICENSE  README.md  install_blasfeo.sh  install_hpipm.sh
.github/workflows/: ci.yaml
doc/: Doxyfile
examples/: CMakeLists.txt  README.md  example_mpc.cpp  example_mpc_resize.cpp  example_ocp_qp.cpp  example_ocp_qp_x0emb.cpp  getting_started_data.hpp
include/hpipm-cpp/: .gitignore  d_ocp_qp_dim_wrapper.hpp  d_ocp_qp_ipm_arg_wrapper.hpp  d_ocp_qp_ipm_ws_wrapper.hpp  d_ocp_qp_sol_wrapper.hpp  d_ocp_qp_wrapper.hpp  hpipm-cpp.hpp  hpipm_solver.hpp  ocp_qp.hpp  ocp_qp_dim.hpp  ocp_qp_ipm.hpp  ocp_qp_ipm_arg.hpp  ocp_qp_ipm_solver.hpp  ocp_qp_ipm_solver_settings.hpp  ocp_qp_ipm_solver_statistics.hpp  ocp_qp_ipm_stat.hpp  ocp_qp_sol.hpp  ocp_qp_solution.hpp  utils.hpp
include/hpipm-cpp/detail/: d_ocp_qp_dim_wrapper.hpp  d_ocp_qp_ipm_arg_wrapper.hpp  d_ocp_qp_ipm_ws_wrapper.hpp  d_ocp_qp_sol_wrapper.hpp  d_ocp_qp_wrapper.hpp
src/: d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_arg_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp  ocp_qp.cpp  ocp_qp_dim.cpp  ocp_qp_ipm.cpp  ocp_qp_ipm_arg.cpp  ocp_qp_ipm_solver.cpp  ocp_qp_ipm_solver_settings.cpp  ocp_qp_ipm_solver_statistics.cpp  ocp_qp_ipm_stat.cpp  ocp_qp_sol.cpp  ocp_qp_solution.cpp
src/detail/: d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_arg_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp
test/: CMakeLists.txt  d_ocp_qp_dim_wrapper.cpp  d_ocp_qp_ipm_arg_wrapper.cpp  d_ocp_qp_ipm_ws_wrapper.cpp  d_ocp_qp_sol_wrapper.cpp  d_ocp_qp_wrapper.cpp  ocp_qp_ipm_solver.cpp  osqp_gen.py  sol0.txt  sol1.txt  sol10.txt  sol11.txt  sol12.txt  sol13.txt  sol14.txt  sol2.txt  sol3.txt  sol4.txt  sol5.txt  sol6.txt  sol7.txt  sol8.txt  sol9.txt
